objects/AVA__Queue__c.object
<CustomObject>
    <fields>
        <fullName>AVA__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CampaignId</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Queue</relationshipLabel>
        <relationshipName>Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ContactId to queue up</description>
        <label>ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Queue</relationshipLabel>
        <relationshipName>Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lead id to queue</description>
        <label>LeadId</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Queue</relationshipLabel>
        <relationshipName>Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Queue</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>